--- a/assets/sass/01-settings/global.scss
+++ b/assets/sass/01-settings/global.scss
@@ -89,17 +89,6 @@ $baseline-unit: 10px;
 	--global--color-background: var(--global--color-green); /* Mint, default body background */
 	--global--color-border: var(--global--color-primary); /* Used for borders (separators) */
 
-	/* OS dark theme preference */
-	@media (prefers-color-scheme: dark) {
-		.has-default-light-palette-background {
-			--global--color-background: var(--global--color-dark-gray);
-			--global--color-primary: var(--global--color-light-gray);
-			--global--color-secondary: var(--global--color-light-gray);
-
-			background-color: var(--global--color-background);
-		}
-	}
-
 	/* Spacing */
 	--global--spacing-unit: #{2 * $baseline-unit}; // 20px
 	--global--spacing-measure: unset; // Use ch units here. ie: 60ch = 60 character max-width
@@ -260,5 +249,18 @@ $baseline-unit: 10px;
 		--global--font-size-xxxl: 9rem; // 144px / 16px
 		--heading--font-size-h3: 2rem; // 32px / 16px
 		--heading--font-size-h2: 3rem; // 48px / 16px
+	}
+}
+
+/* OS dark theme preference */
+@media (prefers-color-scheme: dark) {
+	html.has-default-light-palette-background {
+		--global--color-background: var(--global--color-dark-gray);
+		--global--color-primary: var(--global--color-light-gray);
+		--global--color-secondary: var(--global--color-light-gray);
+
+		body {
+			background-color: var(--global--color-background);
+		}
 	}
 }
